[fix] (styles): fixed letter spacing

--- a/assets/section-text-with-background.css
+++ b/assets/section-text-with-background.css
@@ -22,7 +22,7 @@
 .custom-text__title {
   text-align: center;
   font-weight: 500;
-  letter-spacing: -0.4px;
+  letter-spacing: normal;
   line-height: 36px;
   margin-top: 0;
 }
